overlays/prod-env/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calorielens-api
spec:
  replicas: 2
